--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>💘 Valentine 💘</title>
+<style>
+body {
+  margin:0;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:linear-gradient(135deg,#ff4d6d,#ffb3c6);
+  font-family:Arial,sans-serif;
+}
+.card {
+  background:white;
+  padding:30px;
+  border-radius:20px;
+  text-align:center;
+  box-shadow:0 10px 25px rgba(0,0,0,.3);
+  max-width:320px;
+}
+a {
+  display:inline-block;
+  padding:12px 20px;
+  margin:10px;
+  border-radius:14px;
+  text-decoration:none;
+  font-size:16px;
+}
+.yes {background:#ff4d6d;color:white;}
+.no {background:#ddd;color:black;}
+</style>
+</head>
+<body>
+<div class="card">
+<h2>Hey William 😏</h2>
+<p>
+Be honest…<br><br>
+Do you want to continue the <b>very good sex</b><br>
+and also be my Valentine? 💘
+</p>
+
+<a class="yes" href="#">Obviously 🔥</a>
+<a class="no" href="#">No 😈</a>
+
+<p><i>(Choose wisely 😌)</i></p>
+</div>
+</body>
+</html>
